white-ter bg a ine farby, refactor columnov na contentpage, velkosti btnov

--- a/resources/frontend/src/component/Pagination/Pagination.css
+++ b/resources/frontend/src/component/Pagination/Pagination.css
@@ -5,3 +5,11 @@
 .dropdown-menu {
     min-width: 50%;
 }
+
+.pagination-next, .pagination-previous, .dropdownBt{
+    width: 7rem;
+}
+
+.pagination-previous:focus, .pagination-next:focus, .pagination-link:focus {
+    border-color: #dbdbdb;
+}
