--- a/resources/frontend/src/component/Table/Table.css
+++ b/resources/frontend/src/component/Table/Table.css
@@ -1,3 +1,15 @@
+.btn{
+    border:none;
+    font-size: 1em;
+    line-height: 1.5;
+    font-weight: 700;
+}
+
+.q{
+    position: relative;
+    top:5px;
+}
+
 table {
     border-collapse: separate;
     border-spacing: 0;
